# kestell.org

./: .gitignore  Makefile  README.md  build.py  build.sh  config.toml  docker.sh  install.sh  justfile  main.py  pyproject.toml  recipes.py  requirements.txt  run.sh  serve.sh  watch.py  watch.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
builder/: .dockerignore  BaseCommand.cs  BuildCommand.cs  Builder.csproj  Builder.sln  DirectoryWatcher.cs  Dockerfile  ServeCommandHandler.cs  SiteBuilder.cs  install.sh
builder/Builder/: BaseCommand.cs  BuildCommandHandler.cs  BuildOptions.cs  Builder.csproj  Page.cs  PageMeta.cs  Program.cs  ProgramRootCommand.cs  ServeCommand.cs  ServeCommandHandler.cs  ServeOptions.cs  SiteBuilder.cs  Watcher.cs
content/: home-network.md  nonsense.md  qr-codes.md  recipes.md  test.md  trs-80-model-100.md  vortex-of-the-mind.md  xdg-default-applications.md  z-offset.md
content/posts/: goodbye-world.md  hello-world.md  nonsense.md  z-offset.md
content/projects/: _index.md  trs-80-model-100.md  vortex-of-the-mind.md
content/recipes/: _index.md  basic-white-bread.md  bechamel.md  birria-tacos.md  biscuits.md  boiled-cake-frosting.md  brown-rice.md  cranberry-sauce.md  ermine-frosting.md  french-apple-cake.md  jiffy-cornbread-cake.md  jiffy-cornbread.md  picadillo-frog.md  pizza-crust.md  pizza-dough.md  sausage-gravy.md
content/reference/: home-network.md  qr-codes.md  z-offset.md
content/things/: _index.md
public/: index.html  index.xml  sitemap.xml
templates/: home.html.j2  index.html.j2  show.html.j2
(+216 files in other folders)
